--- a/config.toml
+++ b/config.toml
@@ -59,6 +59,8 @@ weight = 23
 title = "KCD Cloud Native"
 weight = 1
 languageName = "KCD Cloud Native"
+landingPageURL = "https://kcdchennai.github.io/cloud-native-k8s-workshop"
+landingPageName = "<i class='fas fa-home'></i> Home"
 
 [Languages.ee]
 title = "KCD Docker Intro"
