--- a/config.toml
+++ b/config.toml
@@ -45,8 +45,8 @@ enableEmoji = true
 home = ["HTML", "RSS", "JSON"]
 
 [[menu.shortcuts]]
-name = "<i class='fas fa-chalkboard-teacher'></i> Sponsored by CNCF"
-url = "https://www.cncf.io/"
+name = "<i class='fas fa-chalkboard-teacher'></i> Sponsored by KCD Chennai"
+url = "https://www.kcdchennai.in/"
 weight = 23
 
 [markup]
